Tue Oct 29 12:58:51 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* constants.sh (constants): Removed useless constants.

	* Makefile.am: No need for special
	  dependencies with the new mkdep in fact, provided that the
	  Makefile.in that is distributed contains these dependencies !

	* s-garthi.ads: Removed dependency on System.Garlic.Constants.

	* Makefile.am: Added s-gaosli.*.

	* s-gaosli.ads: New file with Getenv.

	* s-gaosli.adb: Idem.

	* s-garopt.adb: Use System.Garlic.OS_Lib's Getenv.

	* s-gardeb.adb: Idem.

	* s-garthi.ads: Added interface to system's getenv() function.

Fri Oct 18 14:12:03 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* Makefile.*: Include s-gaprco.*, s-garloo.*

Thu Oct 17 19:18:17 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garsta.adb: Two typos.

Thu Oct 17 08:53:59 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* s-garloo.adb: Skip Header.

	* s-garhea.adb, s-rpc.adb: Let send a message to myself.

Wed Oct 16 21:32:52 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* s-gaprco.adb, s-gaprco.ads, s-garsta.adb: The body of this
 	package should be built during GARLIC installation. It should
 	contain a registration of all protocols provided in the DSA
 	distribution.

Sun Oct  6 15:17:18 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gsmasp.ads: New file.

	* s-garser.ads: New file.

Mon Sep 30 16:13:29 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Would look for s-gtplsp.ads in the bad place.

Sun Sep 15 17:27:30 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Added an Emergency_Stop in the Shutdown procedure
	  (see the procedure for explanation).

Thu Sep 12 14:55:27 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* mkdep: Change the way dependencies are generated. This one seems
	  to be the good one.

	* s-garter.adb: Don't check Get_Active_Task_Count during the
	  second termination phase to avoid unexpected rejection of
	  termination.

Wed Sep 11 19:43:48 1996  Samuel Tardieu  <sam@inf.enst.fr>
